force-app/main/default/objects/Ticket__c/fields/Amount_Available__c.field-meta.xml
<CustomField>
    <fullName>Amount_Available__c</fullName>
    <label>Amount Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>