force-app/main/default/objects/Ticket__c/fields/Member_Price__c.field-meta.xml
<CustomField>
    <fullName>Member_Price__c</fullName>
    <label>Member Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>