force-app/main/default/objects/Ticket__c/recordTypes/Community_School_s_101_Training.recordType-meta.xml
<RecordType>
    <fullName>Community_School_s_101_Training</fullName>
    <active>true</active>
    <label>Community Schools 101 Training</label>
</RecordType>