force-app/main/default/objects/Ticket__c/recordTypes/Community_Schools_Conference.recordType-meta.xml
<RecordType>
    <fullName>Community_Schools_Conference</fullName>
    <active>true</active>
    <label>Community Schools Conference</label>
</RecordType>