force-app/main/default/objects/Ticket__c/recordTypes/Schools_Out.recordType-meta.xml
<RecordType>
    <fullName>Schools_Out</fullName>
    <active>true</active>
    <label>Schools Out</label>
</RecordType>