force-app/main/default/objects/Ticket__c/recordTypes/VIP_Dinner.recordType-meta.xml
<RecordType>
    <fullName>VIP_Dinner</fullName>
    <active>true</active>
    <label>VIP Dinner</label>
</RecordType>