force-app/main/default/objects/Ticket__c/recordTypes/X21st_Century.recordType-meta.xml
<RecordType>
    <fullName>X21st_Century</fullName>
    <active>true</active>
    <label>21st Century</label>
</RecordType>