force-app/main/default/objects/Ticket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>Member_Price__c</columns>
    <columns>Amount_Available__c</columns>
    <columns>Amount_Used__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>